# modelagem-modulo-membranas

./: Diagrama sem nome.drawio  README.md  UML.drawio  UML.mdj  teste.cpp
Codigo/: main.cpp
Codigo/Geometria/: geometria.cpp  geometria.h  testeGeometria.cpp
Codigo/Gerais/: base.cpp  base.h
Codigo/Mistura/: especies.cpp  especies.h
Geometria/: main.cpp
Projeto/: CMakeLists.txt  main.cpp
Projeto/Geometria/: geometria.cpp  geometria.h
Projeto/Gerais/: base.cpp  base.h  gerais.cpp  gerais.h  matplotlibcpp.h
Projeto/Mistura/: especies.cpp  especies.h  mistura.cpp  mistura.h
